force-app/main/default/objects/OrderItem/fields/Account_Credit_Used__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Used__c</fullName>
    <label>Account Credit Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>