force-app/main/default/objects/OrderItem/fields/Additional_Devices_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Devices_Cost__c</fullName>
    <inlineHelpText>Included in Unit Price</inlineHelpText>
    <label>Additional Devices Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>