force-app/main/default/objects/OrderItem/fields/Amount_To_Be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Invoiced__c</fullName>
    <formula>Total_Net_Price__c  +  Shipping_Amount__c +  Shipping_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Be Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>