force-app/main/default/objects/OrderItem/fields/Automated_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Automated_Billing_Date__c</fullName>
    <inlineHelpText>If the product creates recurring invoices, this field will indicate when the next invoicing date will be</inlineHelpText>
    <label>Automated Billing Date</label>
    <type>Date</type>
</CustomField>