force-app/main/default/objects/OrderItem/fields/BV_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>BV_Invoice_Date__c</fullName>
    <label>BV Invoice Date</label>
    <type>Date</type>
</CustomField>