force-app/main/default/objects/OrderItem/fields/BV_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>BV_Invoice_Number__c</fullName>
    <label>BV Invoice Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>