force-app/main/default/objects/OrderItem/fields/Calculated_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Gross_Margin__c</fullName>
    <label>Calculated Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>