force-app/main/default/objects/OrderItem/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Sets the Category based on the Product Family, Delivery Method and other variables. Used for reporting against goals.</description>
    <formula>IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;FACILITATORG&quot;), &quot;Facilitator&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;INHOUSEG&quot;), &quot;In-House&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode,&quot;3RDPARTYG&quot;), &quot;Third Party&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;In-House&quot;), &quot;In-House&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;3rd Party&quot;), &quot;Third Party&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp;  SBQQ__RequiredBy__r.Product_Code__c = &apos;OL-JHSCI&apos;, &quot;In-House&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;On-site&quot;), &quot;Onsite&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Consulting Services&quot;), &quot;Consulting/Contract&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Online&quot;), &quot;Online&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Memberships&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Online&quot;), &quot;Online Membership&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Physical Goods&quot;), &quot;Materials/Videos&quot;,
null)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>