force-app/main/default/objects/OrderItem/fields/Category_Product_Based__c.field-meta.xml
<CustomField>
    <fullName>Category_Product_Based__c</fullName>
    <description>Sets the Category to specific Product buckets based on the Product Family, Delivery Method and other variables. Used for reporting against quantity goals.</description>
    <formula>IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3-IHG&quot;), &quot;IH JHSC&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3-3PG&quot;), &quot;3P JHSC&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3-OSG&quot;), &quot;OS JHSC&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;IHTTTGOAL&quot;), &quot;IH TTT&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;3PTTTGOAL&quot;), &quot;3P TTT&quot;,
IF(CONTAINS(PricebookEntry.Product2.ProductCode, &quot;OSGOAL&quot;), &quot;OS&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;In-House&quot;) &amp;&amp; CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3&quot;), &quot;IH JHSC&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;3rd Party&quot;) &amp;&amp; CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3&quot;), &quot;3P JHSC&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;On-site&quot;) &amp;&amp; CONTAINS(PricebookEntry.Product2.ProductCode, &quot;JHSCI3&quot;), &quot;OS JHSC&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;In-House&quot;) 
&amp;&amp; PricebookEntry.Product2.Train_the_Trainer__c = TRUE &amp;&amp; PricebookEntry.Product2.Name &lt;&gt; &quot;Train-the-Trainer_Classroom&quot;, &quot;IH TTT&quot;, 
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;Classroom&quot;) &amp;&amp; ISPICKVAL(Classroom_Course__r.IH3POS__c, &quot;3rd Party&quot;) 
&amp;&amp; PricebookEntry.Product2.Train_the_Trainer__c = TRUE &amp;&amp; PricebookEntry.Product2.Name &lt;&gt; &quot;Train-the-Trainer_Classroom&quot;, &quot;3P TTT&quot;,
IF(ISPICKVAL(PricebookEntry.Product2.Family, &quot;Courses&quot;) &amp;&amp; ISPICKVAL(PricebookEntry.Product2.Delivery_Method__c,&quot;On-site&quot;),&quot;OS&quot;,
null))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category - Product Based</label>
    <type>Text</type>
</CustomField>