force-app/main/default/objects/OrderItem/fields/Certificate_Expires__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expires__c</fullName>
    <description>Captures whether a course product&apos;s certificate expires.</description>
    <inlineHelpText>Indicates whether a course product&apos;s certificate expires.</inlineHelpText>
    <label>Certificate Expires?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>