force-app/main/default/objects/OrderItem/fields/Classroom_Course__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connection to scheduled &quot;Classroom&quot; Service Appointment records (IH or 3P). Establishes the booked seats for a given classroom course.</description>
    <inlineHelpText>Connection to scheduled &quot;Classroom&quot; Service Appointment records (IH or 3P). Establishes the booked seats for a given classroom course.</inlineHelpText>
    <label>Classroom Course</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Classroom Ordered Seats</relationshipLabel>
    <relationshipName>Classroom_Ordered_Seats</relationshipName>
    <type>Lookup</type>
</CustomField>