force-app/main/default/objects/OrderItem/fields/Cloned_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Status__c</fullName>
    <label>Cloned Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Canceled - Invoice</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
                <isActive>false</isActive>
                <label>Activated</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
                <isActive>false</isActive>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>Reschedulable</fullName>
                <isActive>false</isActive>
                <label>Reschedulable</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <isActive>false</isActive>
                <label>Shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>