force-app/main/default/objects/OrderItem/fields/Commission_Percentage_Override__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage_Override__c</fullName>
    <label>Commission Percentage Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>