force-app/main/default/objects/OrderItem/fields/Consulting_Hours_Needed__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Hours_Needed__c</fullName>
    <description>Captures the number of hours needed for a consulting product.</description>
    <inlineHelpText>Indicates the number of hours needed for a consulting product.</inlineHelpText>
    <label>Consulting Hours Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>