force-app/main/default/objects/OrderItem/fields/Contracted_Discount_Display__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Discount_Display__c</fullName>
    <label>Contracted Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>