force-app/main/default/objects/OrderItem/fields/Course_Material__c.field-meta.xml
<CustomField>
    <fullName>Course_Material__c</fullName>
    <description>Captures the materials that come with this course.</description>
    <inlineHelpText>Indicates the materials that come with this course.</inlineHelpText>
    <label>Course Material</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>