force-app/main/default/objects/OrderItem/fields/Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Course_Product_Line__c</fullName>
    <description>Captures the product line for the Product.</description>
    <inlineHelpText>Indicates the product line.</inlineHelpText>
    <label>Course Product Line</label>
    <length>32</length>
    <type>Text</type>
</CustomField>