force-app/main/default/objects/OrderItem/fields/Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Month__c</fullName>
    <formula>MONTH(DateValue(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>