force-app/main/default/objects/OrderItem/fields/CRM_Statement_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Statement_Item_Id__c</fullName>
    <label>CRM Statement Item Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>