force-app/main/default/objects/OrderItem/fields/Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment__c</fullName>
    <description>Captures date of payment</description>
    <label>Date of Full Payment</label>
    <type>Date</type>
</CustomField>