force-app/main/default/objects/OrderItem/fields/Days_Till_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Till_Scheduled_Start__c</fullName>
    <description>Calculate the number of days (delta) between TODAY() and Scheduled Start via classroom</description>
    <formula>DATEVALUE(Classroom_Course__r.SchedStartTime) - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the number of days (delta) between TODAY() and Scheduled Start via classroom</inlineHelpText>
    <label>Days Till Scheduled Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>