force-app/main/default/objects/OrderItem/fields/Days_to_Fulfill_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Fulfill_Order__c</fullName>
    <defaultValue>&quot;1-2 business days&quot;</defaultValue>
    <description>Captures number of business days required to fulfill the physical goods ordered. Default = 1-2 business days.</description>
    <inlineHelpText>Indicates number of business days required to fulfill the physical goods ordered. Default = 1-2 business days.</inlineHelpText>
    <label>Days to Fulfill Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>