force-app/main/default/objects/OrderItem/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Captures the Product&apos;s Delivery Method when applicable.</description>
    <inlineHelpText>Indicates the Product&apos;s Delivery Method when applicable.</inlineHelpText>
    <label>Delivery Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>