force-app/main/default/objects/OrderItem/fields/External_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Name__c</fullName>
    <description>Captures the external product name to be used on Order output documents. Populated upon creation of Order Product.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the external product name to be used on Order output documents.</inlineHelpText>
    <label>External Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>