force-app/main/default/objects/OrderItem/fields/Extra_Seat_Charge__c.field-meta.xml
<CustomField>
    <fullName>Extra_Seat_Charge__c</fullName>
    <description>Captures the Product&apos;s or Product Option&apos;s Extra Seat Charge to use with Price Rule.</description>
    <inlineHelpText>Indicates the Product&apos;s or Product Option&apos;s Extra Seat Charge to use with Price Rule.</inlineHelpText>
    <label>Extra Seat Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>