force-app/main/default/objects/OrderItem/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>TEXT( Fiscal_Year__c ) + &apos; Q&apos; + TEXT( Fiscal_Quarter__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>