force-app/main/default/objects/OrderItem/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <formula>IF( 
OR(MONTH(Datevalue(CreatedDate)) = 9, MONTH(Datevalue(CreatedDate)) = 10, MONTH(Datevalue(CreatedDate)) = 11),
1,
 IF(
 OR(MONTH(Datevalue(CreatedDate)) = 12, MONTH(Datevalue(CreatedDate)) = 1, MONTH(Datevalue(CreatedDate)) = 2),
 2,
  IF(
  OR(MONTH(Datevalue(CreatedDate)) = 3, MONTH(Datevalue(CreatedDate)) = 4, MONTH(Datevalue(CreatedDate)) = 5),
  3,
   IF(
   OR(MONTH(Datevalue(CreatedDate)) = 6, MONTH(Datevalue(CreatedDate)) = 7, MONTH(Datevalue(CreatedDate)) = 8),
   4,
    0
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>