force-app/main/default/objects/OrderItem/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(
AND(MONTH(Datevalue(CreatedDate)) &gt;= 9, MONTH(Datevalue(CreatedDate)) &lt;= 12),
YEAR(Datevalue(CreatedDate)) + 1,
YEAR(Datevalue(CreatedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>