force-app/main/default/objects/OrderItem/fields/From_LMS__c.field-meta.xml
<CustomField>
    <fullName>From_LMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From LMS</label>
    <type>Checkbox</type>
</CustomField>