force-app/main/default/objects/OrderItem/fields/Full_OrderProductId__c.field-meta.xml
<CustomField>
    <fullName>Full_OrderProductId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full_OrderProductId</label>
    <type>Text</type>
</CustomField>