force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_Cancel_Reason__c</fullName>
    <label>GB Sub Renewal Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal is too complicated</fullName>
            </value>
            <value>
                <fullName>Delivery time is too long</fullName>
            </value>
            <value>
                <fullName>No longer needed due to change in business</fullName>
            </value>
            <value>
                <fullName>Found an alternative at a lesser price</fullName>
            </value>
            <value>
                <fullName>I didn&apos;t mean to subscribe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>