force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_Canceled__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GB Sub Renewal Canceled</label>
    <type>Checkbox</type>
</CustomField>