force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GB Sub Renewal Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>