force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_Confirmation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_Confirmation_Sent_Date__c</fullName>
    <label>GB Sub Renewal Confirmation Sent Date</label>
    <type>DateTime</type>
</CustomField>