force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_Quantity__c</fullName>
    <label>GB Sub Renewal Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>