force-app/main/default/objects/OrderItem/fields/GB_Sub_Renewal_URL__c.field-meta.xml
<CustomField>
    <fullName>GB_Sub_Renewal_URL__c</fullName>
    <label>GB Sub Renewal URL</label>
    <type>Url</type>
</CustomField>