force-app/main/default/objects/OrderItem/fields/Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Import_Id__c</fullName>
    <description>Captures the original Id of the record from the original source.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the original Id of the record from the original source.</inlineHelpText>
    <label>Import Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>