force-app/main/default/objects/OrderItem/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Captures the industry(ies) the product is applicable for. Specific for marketing.</description>
    <inlineHelpText>Indicates the industry(ies) the product is applicable for. Specific for marketing.</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>