force-app/main/default/objects/OrderItem/fields/Intacct_GL_No__c.field-meta.xml
<CustomField>
    <fullName>Intacct_GL_No__c</fullName>
    <label>Intacct GL No</label>
    <length>32</length>
    <type>Text</type>
</CustomField>