force-app/main/default/objects/OrderItem/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <inlineHelpText>Indicate the Invoice Date. Populated by Accounting. Add to Order Product Layout under Activation Status</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>