force-app/main/default/objects/OrderItem/fields/Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Memo__c</fullName>
    <label>Invoice Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>