force-app/main/default/objects/OrderItem/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Captures invoice number of an order product</description>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>