force-app/main/default/objects/OrderItem/fields/Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Subtotal__c</fullName>
    <label>BV Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>