force-app/main/default/objects/OrderItem/fields/Invoice_Tax__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax__c</fullName>
    <label>BV Invoice Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>