force-app/main/default/objects/OrderItem/fields/Is_Half_Day_Course__c.field-meta.xml
<CustomField>
    <fullName>Is_Half_Day_Course__c</fullName>
    <description>Formula field to indicate if the Order Product has a Duration = 4. Set to 1 if True. Used with Summary Variables and Price Rules.</description>
    <inlineHelpText>Formula field to indicate if the Order Product has a Duration = 4. Set to 1 if True.</inlineHelpText>
    <label>Is Half Day Course</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>