force-app/main/default/objects/OrderItem/fields/IsMutiDay__c.field-meta.xml
<CustomField>
    <fullName>IsMutiDay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if the product is multi-day or not.</description>
    <inlineHelpText>Indicates if the product is multi-day or not.</inlineHelpText>
    <label>IsMutiDay</label>
    <type>Checkbox</type>
</CustomField>