force-app/main/default/objects/OrderItem/fields/Lifting_Device_Eval_Details__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Device_Eval_Details__c</fullName>
    <description>Captures the type(s) and number(s) of lifting device(s) each person needs to be evaluated on.</description>
    <inlineHelpText>Indicates the type(s) and number(s) of lifting device(s) each person needs to be evaluated on.</inlineHelpText>
    <label>Lifting Device Eval Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>