force-app/main/default/objects/OrderItem/fields/List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price__c</fullName>
    <label>List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>