force-app/main/default/objects/OrderItem/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <description>Redirects user to Google Map using the training address.</description>
    <formula>&quot;https://maps.google.com/maps?q=&quot; &amp; Training_Street__c &amp; &apos;,+&apos; &amp; Training_City__c &amp; &apos;,+&apos; &amp; Training_Province__c &amp; &apos;,+&apos; &amp; Training_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Redirects user to Google Map using the training address.</inlineHelpText>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>