force-app/main/default/objects/OrderItem/fields/Maximum_Capacity_Maximum_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capacity_Maximum_Attendees__c</fullName>
    <description>Captures the course&apos;s maximum capacity.</description>
    <inlineHelpText>Indicates the course&apos;s maximum capacity.</inlineHelpText>
    <label>Maximum Capacity (Maximum Attendees)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>