force-app/main/default/objects/OrderItem/fields/MaxOSCapacity_AdditionalChargeThreshold__c.field-meta.xml
<CustomField>
    <fullName>MaxOSCapacity_AdditionalChargeThreshold__c</fullName>
    <description>Formula field to pull the Product or Product Options&apos;s MaxOSCapacity(AdditionalChargeThreshold).</description>
    <inlineHelpText>Formula field to pull the Product or Product Options&apos;s MaxOSCapacity(AdditionalChargeThreshold).</inlineHelpText>
    <label>MaxOSCapacity(AdditionalChargeThreshold)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>