force-app/main/default/objects/OrderItem/fields/Min_Capacity_IH_3P_Fill_Rate_Req__c.field-meta.xml
<CustomField>
    <fullName>Min_Capacity_IH_3P_Fill_Rate_Req__c</fullName>
    <description>Captures the course&apos;s minimum capacity for In-House and 3rd Party course Products.</description>
    <inlineHelpText>Indicates the course&apos;s minimum capacity for In-House and 3rd Party course Products.</inlineHelpText>
    <label>Min Capacity (IH &amp; 3P Fill Rate Req)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>