force-app/main/default/objects/OrderItem/fields/Multi_Day_Duration__c.field-meta.xml
<CustomField>
    <fullName>Multi_Day_Duration__c</fullName>
    <description>Captures the duration in numbers for multi-day courses.</description>
    <inlineHelpText>Indicates the duration in numbers for multi-day courses.</inlineHelpText>
    <label>Multi-Day Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>