force-app/main/default/objects/OrderItem/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <description>Captures the number of participants for the training.</description>
    <inlineHelpText>Captures the number of participants for the training.</inlineHelpText>
    <label>Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>