force-app/main/default/objects/OrderItem/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>Order.OrderNumber</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>